# BlastOff2000

./: README.md  index.html  pyproject.toml
app/: __init__.py  main.py
app/static/: game.js  gl.js  index.html  main.js  style.css
assets/: game.js  main.js  style.css
docs/: game.js  index.html
docs/static/audio/: README_SOUNDS.txt
tests/: test_app.py
