[project]
name = "gravity-webgl"
version = "0.1.0"
description = "WebGL remake of the classic Gravity Force served with FastAPI"
authors = [{name = "mikael"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.27"
]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"
